outputs/tsne_11271759.err
  File "tsne.py", line 126
    last_layer = []i
                   ^
SyntaxError: invalid syntax
